tests/namespace.err.out
error: namespace.err.li 6,6: variable `n` is not defined
    6 | echo(n)
      |      ^
error: namespace.err.li 7,1: function `f` is not defined
    7 | f()
      | ^^^
error: namespace.err.li 8,1: namespace `undefined_ns` is not defined
    8 | undefined_ns::f()
      | ^^^^^^^^^^^^
error: namespace.err.li 9,6: namespace `undefined_ns` is not defined
    9 | echo(undefined_ns::n)
      |      ^^^^^^^^^^^^
